set(INTERNAL_LIBS_INCLUDE_PATH ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(statisticsRepository)
add_subdirectory(translationRepository)
add_subdirectory(wordDescriptionRepository)
add_subdirectory(wordDescriptionDownloader)
add_subdirectory(utils)
add_subdirectory(webConnection)
add_subdirectory(translator)
add_subdirectory(glossary)
