set(INTERNAL_LIBS_INCLUDE_PATH ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(webConnection)
add_subdirectory(utils)
add_subdirectory(dictionaryService)
add_subdirectory(translator)
add_subdirectory(translationRepository)
add_subdirectory(translationService)
add_subdirectory(statisticsRepository)
add_subdirectory(wordDescriptionRepository)
add_subdirectory(wordDescriptionDownloader)
add_subdirectory(glossary)
