set(INTERNAL_LIBS_INCLUDE_PATH ${CMAKE_CURRENT_LIST_DIR})

add_subdirectory(httpClient)
add_subdirectory(utils)
add_subdirectory(dictionaryService)
add_subdirectory(domain)
add_subdirectory(translationRepository)
add_subdirectory(wordDescriptionRepository)
add_subdirectory(wordDescriptionDownloader)
add_subdirectory(wordDescriptionService)
add_subdirectory(statisticsRepository)
add_subdirectory(glossary)
add_subdirectory(gui)
